@@ -26,7 +26,9 @@
 
 $optionsWithArgs = array( 'd', 's', 'e', 'h', 't' ); // -d <delay>, -s <startid>, -e <endid>
 
-require_once( 'commandLine.inc' );
+require_once ( getenv('MW_INSTALL_PATH') !== false
+	? getenv('MW_INSTALL_PATH')."/maintenance/commandLine.inc"
+	: 'commandLine.inc' );
 
 global $smwgIP, $wgServer;
 include_once($smwgIP . '/includes/SMW_Infolink.php');
